src/current/_includes/v26.2/misc/index-storage-parameters.md
| Parameter name | Description | Data type | Default value | Can be [altered after index creation]({% link {{ page.version.version }}/alter-index.md %}#modify-index-storage-parameters)?
|---------------------+----------------------|-----|------|-----|
| `bucket_count` | The number of buckets into which a [hash-sharded index]({% link {{ page.version.version }}/hash-sharded-indexes.md %}) will split. | Integer | The value of the `sql.defaults.default_hash_sharded_index_bucket_count` [cluster setting]({% link {{ page.version.version }}/cluster-settings.md %}). | No |
| <a name="storage-parameter-shard-columns"></a> `shard_columns` | The first key column or columns to use when computing the shard column for a [hash-sharded index]({% link {{ page.version.version }}/hash-sharded-indexes.md %}). The value must match a prefix of the index key columns. If this parameter is omitted, CockroachDB hashes all index key columns. | Tuple of column identifiers or a single column identifier | All index key columns | No |
| <a name="skip-unique-checks"></a> `skip_unique_checks` | Disables [unique constraint checks]({% link {{ page.version.version }}/unique.md %}) for indexes with [implicit partition]({% link {{ page.version.version }}/alter-table.md %}#using-implicit-vs-explicit-index-partitioning-in-regional-by-row-tables) columns, including indexes on [`REGIONAL BY ROW`]({% link {{ page.version.version }}/regional-tables.md %}) tables. This avoids expensive cross-partition uniqueness checks in multi-region deployments. Can only be set on unique indexes with implicit partitioning. **Warning:** This should only be used if the application can guarantee uniqueness. Safe use cases include: externally generated UUIDs, or columns using [`unique_rowid()`]({% link {{ page.version.version }}/sql-faqs.md %}#how-do-i-auto-generate-unique-row-ids-in-cockroachdb) or [`unordered_unique_rowid()`]({% link {{ page.version.version }}/sql-faqs.md %}#how-do-i-auto-generate-unique-row-ids-in-cockroachdb) as defaults (provided you do not also manually insert values into those columns). Note that, by default, the optimizer does not perform uniqueness checks on columns using [`gen_random_uuid()`]({% link {{ page.version.version }}/uuid.md %}). Incorrectly applying this parameter when uniqueness is not guaranteed could result in logically duplicate keys in different partitions of a unique index. | Boolean | `false` | Yes |
| `geometry_max_x` | The maximum X-value of the [spatial reference system]({% link {{ page.version.version }}/architecture/glossary.md %}#spatial-reference-system) for the object(s) being covered. This only needs to be set if you are using a custom [SRID]({% link {{ page.version.version }}/architecture/glossary.md %}#srid). | | Derived from SRID bounds, else `(1 << 31) -1`. | No |
| `geometry_max_y` | The maximum Y-value of the [spatial reference system]({% link {{ page.version.version }}/architecture/glossary.md %}#spatial-reference-system) for the object(s) being covered. This only needs to be set if you are using a custom [SRID]({% link {{ page.version.version }}/architecture/glossary.md %}#srid). | | Derived from SRID bounds, else `(1 << 31) -1`. | No |
| `geometry_min_x` | The minimum X-value of the [spatial reference system]({% link {{ page.version.version }}/architecture/glossary.md %}#spatial-reference-system) for the object(s) being covered. This only needs to be set if the default bounds of the SRID are too large/small for the given data, or SRID = 0 and you wish to use a smaller range (unfortunately this is currently not exposed, but is viewable on <https://epsg.io/3857>). By default, SRID = 0 assumes `[-min int32, max int32]` ranges. | | Derived from SRID bounds, else `-(1 << 31)`. | No |
| `geometry_min_y` | The minimum Y-value of the [spatial reference system]({% link {{ page.version.version }}/architecture/glossary.md %}#spatial-reference-system) for the object(s) being covered. This only needs to be set if you are using a custom [SRID]({% link {{ page.version.version }}/architecture/glossary.md %}#srid). | | Derived from SRID bounds, else `-(1 << 31)`. | No |
| `s2_level_mod` | `s2_max_level` must be divisible by `s2_level_mod`. `s2_level_mod` must be between `1` and `3`. | Integer | `1` | No |
| `s2_max_cells` | The maximum number of S2 cells used in the covering. Provides a limit on how much work is done exploring the possible coverings. Allowed values: `1-30`. You may want to use higher values for odd-shaped regions such as skinny rectangles. Used in [spatial indexes]({% link {{ page.version.version }}/spatial-indexes.md %}). | Integer | `4` | No |
| `s2_max_level` | The maximum level of S2 cell used in the covering. Allowed values: `1-30`. Setting it to less than the default means that CockroachDB will be forced to generate coverings using larger cells. Used in [spatial indexes]({% link {{ page.version.version }}/spatial-indexes.md %}). | Integer | `30` | No |

The following parameters are included for PostgreSQL compatibility and do not affect how CockroachDB runs:

- `fillfactor`
